--- a/Wpf_core_diploma/Properties/Resources.resx
+++ b/Wpf_core_diploma/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="dw1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dw1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
