--- a/Wpf_core_diploma/Properties/Resources.resx
+++ b/Wpf_core_diploma/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="dw1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dw1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="msedge_O3xG2PAYzg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\msedge_O3xG2PAYzg.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
