app calendar style, app wdCalendar, add icon

--- a/Wpf_core_diploma/Properties/Resources.resx
+++ b/Wpf_core_diploma/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\delete.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="download" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="dw1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dw1.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -159,5 +162,8 @@
   </data>
   <data name="Добавить 2 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Добавить 2 2.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="загрузка" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\загрузка.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
