--- a/Wpf_core_diploma/Properties/Resources.resx
+++ b/Wpf_core_diploma/Properties/Resources.resx
@@ -154,6 +154,9 @@
   <data name="free-icon-frequency-2961248" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\free-icon-frequency-2961248.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="free-icon-innovation-1430941" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\free-icon-innovation-1430941.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="jornal 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\jornal 2.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
